--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,5 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: \${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        ssh_url: git@github.com:mitanshusurana/Blackbox.git
         publish_dir: ./docs
