--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,12 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        ssh_url: git@github.com:mitanshusurana/Blackbox.git
+        ssh: true
+        publish_dir: ./docs
+    env:
+        SSH_AUTH_SOCK: /tmp/ssh_auth_sock
+    run: |
+        ssh-add \${{ secrets.SSH_PRIVATE_KEY }}
+        git config --global user.name "Mitanshu Surana"
+        git config --global user.email "mitanshusurana@gmail.com"
         publish_dir: ./docs
