Add GitHub Actions workflow for deploying to GitHub Pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,16 +17,16 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '18'
+        node-version: '14'
 
     - name: Install dependencies
       run: npm install
 
     - name: Build the Angular app
-      run: npm run build -- --output-path=docs --base-href=/Blackbox/
+      run: npm run build -- --prod
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        publish_dir: /docs
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist/Blackbox
