--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       run: npm install
 
     - name: Build the Angular app
-      run: npm run build --configuration production
+run: ng build --configuration production
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
