--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Install Angular Cli
+      run: npm.install @angular/cli --latest
+
     - name: Build the Angular app
       run: ng build --configuration production
 
