--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       run: npm install
 
     - name: Install Angular Cli
-      run: npm.install @angular/cli --latest
+      run: npm install @angular/cli --latest
 
     - name: Build the Angular app
       run: ng build --configuration production
