--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       run: npm install @angular/cli --latest
 
     - name: Build the Angular app
-      run: ng build -- --configuration production
+      run : npm run build
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
