--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       run : npm run build
 
     - name: Deploy to GitHub Pages
-      run : npx angular-cli-ghpages --dir=dist/blackbox
+      run : npx angular-cli-ghpages --dir=dist/Blackbox
       env:
         CI : true
         gh_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
