--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       run: npm install @angular/cli --latest
 
     - name: Build the Angular app
-      run : npm run build
+      run : npm run build --output-path=dist/Blackbox
 
     - name: Deploy to GitHub Pages
       run : npx angular-cli-ghpages --dir=dist/Blackbox
