--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,4 @@
-
-name: Deploy to GitHub Pages
+name: Angular Build and Deploy
 
 on:
   push:
@@ -9,24 +8,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18'
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
 
-    - name: Install dependencies
-      run: npm install
+      - name: Build Angular app to prod
+        working-directory: Blackbox
+        run: npm install && npm run build:prod
 
-    - name: Build the Angular app
-      run: npm run build -- --output-path=docs --base-href=/Blackbox/
-
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        publish_dir: /docs
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: Blackbox/dist/browser
+          branch: prod  
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
